<resources>
    <string name="app_name">procrastinaint</string>
    <string name="rwcalendar">Calendar Options</string>
    <string name="notes">Notes</string>
    <string name="welcome">Enter your email and password below to sign in.</string>
    <string name="welcome_signup">To create a new account enter you email and password below.</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="add_event">Add Event</string>
    <string name="title">Title</string>
    <string name="reoccurring">Reoccurring event</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="fire_base_upload">Upload this event to the Firebase?</string>
    <string name="new_user">--------------------------------- Need an account? ---------------------------------</string>
    <string name="old_user">--------------------------- Already have an Account? ---------------------------</string>

    <string name="read_cal">Read From Local Calendar</string>
    <string name="write_cal">Write To Local Calendar</string>
    <string name="AddBreak">Add Break</string>
    <string name="AddAssignment">Add Assignment</string>
    <string name="AddClass">Add New Class</string>
    <string name="menu_descriptor">Open Menu</string>
    <string name="hent">Procrastinaint</string>

    <!--Slide Out Menu Strings-->
    <string name="menu_communication">Communication</string>
    <string name="menu_home">Home</string>
    <string name="menu_timer">Pomodoro Timer</string>
    <string name="menu_cloud">Get Events from Cloud</string>
    <string name="menu_extras">Extras</string>
    <string name="menu_share">Share</string>
    <string name="menu_export">Export To Calendar</string>
    <string name="menu_schedule_settings">Schedule Settings</string>
    <string name="menu_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="go_to_calendar">Go To Calendar View</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">*Temp* [Title]</string>
    <string name="nav_header_subtitle">*Temp* [UserName Here]</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="date">Date</string>
    <string name="days">Days of the Week</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="description">Description</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="title_activity_helper_event_nagvigator_time_interface">
        HelperEventNagvigatorTimeActivityInterface
    </string>
    <string name="name">Name</string>
    <string name="duration">Duration of Event</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="range">Select Date Range</string>
    <string name="pick_time">Select a time for the activity</string>
    <string name="select_start_time">Select a starting time between</string>
    <string name="confirm">Confirm</string>r
    <string name="hour">hour</string>
    <string name="min">min</string>

    <string-array name="PM_AM">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string-array name="Notification_Motivation">
        <item>"Well done is better than well said." - Procrastinaint</item>
        <item>"With the new day comes new strength and new thoughts" - Procrastinaint</item>
        <item>"The secret of getting ahead is getting started" - Procrastinaint</item>
        <item>"Work out twice on Christmas day because why not" - Procrastinaint"</item>
        <item>"Knowing you're different is only the beginning. If you accept those differences you'll be able to get past them and grown even closer." - Procrastinaint</item>
        <item>"If I get reincarnated...I want to be a clam" - Procrastinaint</item>
        <item>"Don't let yesterday take up too much of today" - Procrastinaint</item>
        <item>"We generate fears while we sit. We overcome them by action" - Procrastinaint</item>
        <item>"Whether you think you can or think you can't, you're right" - Procrastinaint</item>
        <item>"If you itch, scratch." - Procrastinaint</item>
        <item>"Rise and grind gamers" - Procrastinaint</item>
    </string-array>

</resources>