<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pomodoro_timer"
            android:icon="@drawable/ic_timer"
            android:title="@string/menu_timer" />
        <item
            android:id="@+id/nav_backupToCloud"
            android:icon="@drawable/ic_back_up"
            android:title="@string/menu_cloud" />
        <item
            android:id="@+id/nav_extras"
            android:icon="@drawable/ic_extras"
            android:title="@string/menu_extras" />

        <item android:title="@string/menu_communication">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share" />
                <item
                    android:id="@+id/nav_export"
                    android:icon="@drawable/ic_export"
                    android:title="@string/menu_export" />
            </menu>
        </item>

        <item android:title="@string/menu_settings">
            <menu>
                <item
                    android:id="@+id/nav_schedule_settings"
                    android:icon="@drawable/ic_schedule_settings"
                    android:title="@string/menu_schedule_settings" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/menu_settings" />
            </menu>
        </item>
    </group>



</menu>
