<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventAdderActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="20dp"
                android:hint="@string/name"
                android:textSize="40sp">

            </EditText>


            <TableRow
                android:id="@+id/reoccurringDatePickerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="20dp"
                android:visibility="gone">

                <TextView
                    android:text="@string/days"
                    android:textSize="16sp">

                </TextView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:text="@string/range"
                    android:textSize="16sp">

                </TextView>
            </TableRow>


            <TableRow
                android:id="@+id/reoccurringDatePickerStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/start_date"
                    android:textSize="16sp">

                </TextView>

                <Button
                    android:id="@+id/start_date"
                    android:text="Pick Date"
                    android:textSize="16sp">

                </Button>

            </TableRow>


            <TableRow
                android:id="@+id/reoccurringDatePickerEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/end_date"
                    android:textSize="16sp">

                </TextView>

                <Button
                    android:id="@+id/end_date"
                    android:text="Pick Date"
                    android:textSize="16sp">

                </Button>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:text="@string/duration"
                    android:textSize="16sp">
                </TextView>

                <EditText
                    android:id="@+id/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:inputType="number"
                    android:hint="@string/hours"
                    android:textSize="12sp">

                </EditText>

                <EditText
                    android:id="@+id/minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="20dp"
                    android:inputType="number"
                    android:hint="@string/minutes"
                    android:textSize="12sp">

                </EditText>


            </TableRow>


            <EditText
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="20dp"
                android:hint="@string/description"
                android:id="@+id/Description">

            </EditText>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="20dp">

                <Button
                    android:id="@+id/AddEvent"
                    android:text="Add">

                </Button>

            </TableRow>
        </TableLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>