<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventAdderActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/EventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="20dp"
                android:hint="@string/title"
                android:textSize="40sp">

            </EditText>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:text="@string/reoccurring"
                    android:textSize="16sp"></TextView>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/reoccurringCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                </androidx.appcompat.widget.AppCompatCheckBox>

                <!-- TODO IF checked addsection for start date and end date
                     TODO ELSE have a selection for 1 date -->

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="20dp"
                android:id="@+id/nonreoccurringDatePickerRow">

                <TextView
                    android:text="@string/date"
                    android:textSize="16sp">
                </TextView>

                <TextView
                    android:text="Date picker goes here"
                    android:textSize="16sp">
                </TextView>

            </TableRow>

            <!--For Date/Time Picker put in a dialog
            https://stackoverflow.com/questions/2055509/datetime-picker-in-android-application -->

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:text="@string/start_time"
                    android:textSize="16sp">
                </TextView>

                <TextView
                    android:text="Time picker goes here"
                    android:textSize="16sp">
                </TextView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:text="@string/end_time"
                    android:textSize="16sp">
                </TextView>

                <TextView
                    android:text="Time picker goes here"
                    android:textSize="16sp">
                </TextView>

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:text="@string/fire_base_upload"
                    android:textSize="16sp">

                </TextView>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/firebase_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                </androidx.appcompat.widget.AppCompatCheckBox>

            </TableRow>
        </TableLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>